--- a/index.html
+++ b/index.html
@@ -1,52 +1,31 @@
 <!DOCTYPE html>
-	<html>
-	<head>
-	      <title>Balabagan's Profile</title>
-     <style>
-     	body {
-     	 	background-image: url('iw.jpg');
-	        background-size: 80 80%;
-            background-attachment: fixed;
-        
-
- </style>	
+<html>
+<head>
+	<title>Hi Welcome</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+<body>
+	<div class="menu-bar">
+<ul>
+<li class="#"><a href="#"><i class="fa fa-home"></i>Home</a></li> 
+<li><a href="#"><i class="fa fa-user-circle-o" ></i>About Me</a>
+    <div class="sub-menu-1">
+    	<ul>
+    		<li><a href="#">Cute</a></li>
+    		<li><a href="#">Loving</a></li>
+    		<li><a href="#">Sweet</a></li>
+    		<li><a href="#">Caring</a></li>
+    	</ul>
+    </div>		
+</li>
+<li><a href="#"><i class="fa fa-address-card-o" ></i>Address</a></li>
+<li><a href="#"><i class="fa fa-phone"></i>Contact</a></li>
+<li><a href="#"><i class="fa fa-hand-o-right"></i>Follow Me</a></li>
+<li><a href="#"><i class="fa fa-search"></i>Website</a></li>
 
+<div/>
+</ul>
+</body>
+</html>
 	
-
-	
-
-<body>
-<left>
-	<h1 style="color: black;">Mr.Gb Rosales </h1>
-	<h2 style="color: black	;">ABOUT ME</h2>
-	<h3 style="color: black ;">Hobbies</h3>
-	<p style="color: black;">Playing baskteball</p>
-	<p style="color: black;">Playing Chess</p>
-
-<body>
-<center>
-	<h4 style="color:black;">FAVORITE FOODS</h4>"
-	<p style="color:black;">Spaghetti</p>
-	<p style="color:black;">Cake</p>
-	<p style="color:black">Chicken </p>
-	<p style="color:black;">Macaroni Salad </p
-<body>
-<right>
-    <h5 style="color:black;">MY FAVORITE QUOUTES</h5>"
-    <p style="color:black;">It's hard to fail, but it is worse never to have tried to succeed.</p>
-
-
-
-</center>
-	</body>
-	</html>
-
-
-
-<button type="button" onclick="alert('https://www.instagram.com/g.e.b.e.y/')">This is my Instagram Account</button>
-<button type="button" onclick="alert('https://twitter.com/GebeyKraken')">This is my Twitter Account</button>
-<button type="button" onclick="alert('https://www.facebook.com/GbRosales12/')">This is my Facebook Account</button>
-</left>
-	</body>
-	</html>
